feat: Phase 1-2 완료 + 크레딧 가격 안내 페이지
오늘 완료된 작업:
✅ Phase 1: 사용자 인증 시스템
- SQLite 데이터베이스 설정
- 회원가입/로그인 API
- JWT 토큰 인증
- 다운로드 API 인증 추가

✅ Phase 2: 크레딧 관리 시스템
- 크레딧 잔액/거래내역 API
- 다운로드 시 크레딧 차감
- 크레딧 부족 시 402 에러

✅ 크레딧 가격 안내 페이지
- pricing.html 생성
- 가격표, 소비량, 무료 크레딧 정책

📊 통계:
- API 엔드포인트: +6개
- 데이터베이스 테이블: 4개
- 코드: ~800줄 추가

🔜 다음 작업:
- 가격 안내 페이지 디자인 개선
- Phase 3: 결제 시스템

--- a/src/youtube_downloader/web/static/index.html
+++ b/src/youtube_downloader/web/static/index.html
@@ -25,9 +25,15 @@
                     <span class="logo-icon">🎥</span>
                     <span class="logo-text">YouTube Downloader</span>
                 </div>
-                <button class="theme-toggle" id="theme-toggle" aria-label="다크 모드 전환">
-                    <span class="theme-icon">🌙</span>
-                </button>
+                <nav style="display: flex; gap: 1rem; align-items: center;">
+                    <a href="/static/pricing.html"
+                        style="color: var(--text-primary); text-decoration: none; font-weight: 500; transition: color 0.3s;">
+                        💳 크레딧 가격
+                    </a>
+                    <button class="theme-toggle" id="theme-toggle" aria-label="다크 모드 전환">
+                        <span class="theme-icon">🌙</span>
+                    </button>
+                </nav>
             </div>
         </div>
     </header>
